# fastapitableau

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci.yml  test-latest-fastapi.yml
docs/: index.md
examples/: complex_model.py  descriptive.py  fancy.py  flights.py  mismatched_name.py  query.py  simple-curl.sh  simple.py  simple_base.py  simple_math.py  simple_math_base.py  simple_openapi.py  sprint_review_example.py  tableau_request_schema.py
fastapitableau/: __init__.py  applications.py  exception_handlers.py  logger.py  logging.py  middleware.py  openapi.py  openapi_scratch.py  pages.py  routing.py  rstudio_connect.py  user_guide.py  utils.py
fastapitableau/statics/css/: home.min.css  new_styles.css  styles.css
fastapitableau/templates/: home.html  index.html  param_table.html  setup_tableau.html  tableau_usage.html  user_guide.html
scratch/: openapi_scratch.py
search/: search_index.json
tests/: main.py  test_applications.py  test_logging.py  test_openapi.py  test_routing.py  test_rstudio_connect.py  test_user_guide.py  test_utils.py
