[bdist_wheel]
universal=1

[metadata]
name = fastapitableau
version = 0.1.0
url = https://github.com/rstudio/fastapitableau
license = Proprietary
license_files = LICENSE.txt
author = Toph Allen, James Blair, Bill Sager
author_email = toph@rstudio.com
description = A Python package for writing FastAPI apps that you can call from Tableau.
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    fastapi
    aiofiles
    commonmark
    requests
    jinja2
setup_requires = setuptools
packages = fastapitableau
python_requires = >=3.7
zip_safe = True
include_package_data = True

[options.extras_require]
test = pytest

[options.package_data]
* = *.html, *.css

[tool:pytest]
testpaths = tests

[pytest]
filterwarnings =
    ignore:A private pytest class or function was used.:PytestDeprecationWarning

[flake8]
# B = bugbear
# C = mccabe
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# T5 = mypy typing notes
# B9 = bugbear opinions
select = B,C,E,F,W,T4,B9
# The following exclusions are (apparently) for black compatibility
# E203 = whitespace before ':'
# E231 =  missing whitespace after ',', ';', or ':'
# E266 = too many leading '#' for comment block
# E302 = expected 2 blank lines, found 0
# E501 = line too long (82 > 79 characters)
# W503 = line break before binary operator
# F403 = 'from module import * used; unable to detect undefined names
ignore = E203, E231, E266, E302, E501, W503, F403
max-line-length = 88
max-complexity = 10
per-file-ignores =
    # __init__ module exports names
    fastapitableau/__init__.py: F401
